--- a/views/activities.html
+++ b/views/activities.html
@@ -1,1 +1,20 @@
-<div id="container"></div>
+<div class="container">
+    <h3>Cursos</h3>    
+</div>
+
+<div class="row">
+    <div class="col m12 l6">
+        <div class="card hoverable z-depth-1">
+            <div class="card-content">
+                <div id="sunburst_container"></div>
+            </div>
+        </div>
+    </div>
+    <div class="col m12 l6">
+        <div class="card hoverable z-depth-1">
+            <div class="card-content">
+                <div id="tree_container"></div>
+            </div>
+        </div>
+    </div>
+</div>
