--- a/views/activities.html
+++ b/views/activities.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h3>Cursos</h3>    
+    <h4>{{activities.course.name}} <a  style="font-size: 85%; cursor:pointer;" class="modal-trigger" data-target="course_modal">[cambiar]</a></h4>    
 </div>
 
 <div class="row">
@@ -14,6 +14,27 @@
         <div class="card hoverable z-depth-1">
             <div class="card-content">
                 <div id="tree_container"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div id="course_modal" class="modal">
+    <div class="modal-content">         
+        <div class="row">
+            <div class="col s12">
+                <h4>Cambiar curso actual</h4>
+                
+                <div class="input-field col s12">
+                    <select id="courses_select">
+                        <option value="" disabled selected>Elija una opción</option>
+						<option ng-repeat="(key,course) in courses track by $index" value="{{key}}">{{course.name}}</option>						
+                    </select>
+                </div>
+
+                <a class="modal-close waves-effect waves-white btn red darken-4">Cancelar</a>
+                <a class="waves-effect waves-white btn green darken-4" ng-click="changeCourse()">Aplicar</a>
             </div>
         </div>
     </div>
