Filtro listado de usuarios

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -37,7 +37,7 @@
                             </i>
                         </span>
                         <ul id="delete-dropdown{{key}}" class="dropdown-content z-depth-4" style="background-color: white;border-radius: 20px;">
-                            <li><a ng-click="deleteComment(key,$parent.$parent.$index)">Eliminar</a></li>
+                            <li><a ng-click="deleteComment(key,$parent.$parent.$index)" style="color:black">Eliminar</a></li>
                         </ul>
                         <p style="margin:0px"><b>{{users[comment.uid].name}}</b></p>
                     </div>                    
