--- a/src/views/users.html
+++ b/src/views/users.html
@@ -6,10 +6,21 @@
       <h5>Usuarios</h5>
     </div>
 
-    <label class="section right">
-      <input type="checkbox" ng-model="showAll"/>
-      <span>Todos</span>
-    </label>  
+    <div class="row right">
+      <div class="col s2">
+          <a class="right waves-effect waves-grey btn-flat" ng-click="user_filter=''" style="margin-top:20px;"><i class="material-icons tiny">close</i></a>
+      </div>
+      <div class="input-field col s4">
+        <input id="filter_input" type="text" ng-model="user_filter">
+        <label for="filter_input">Búsqueda</label>
+      </div>
+      <div class="col s4">
+        <label class="section right">
+          <input type="checkbox" ng-model="showAll"/>
+          <span>Todos</span>
+        </label>  
+      </div>
+    </div>
 
     <table class="highlight" ng-if="users" style="max-width:100%;overflow-x:auto;display:inline-block;">
       <thead>
@@ -24,9 +35,9 @@
       </thead>
 
       <tbody>
-        <tr style="padding: 1px 1px;" ng-repeat="(key,row) in users" ng-show="showAll || (!row.admin && row.course == user.course)">
+        <tr style="padding: 1px 1px;" ng-repeat="(key,row) in (users | orderBy: orderTag : reverseOrder | filter : user_filter) track by $index" ng-show="showAll || (!row.admin && row.course == user.course)">
           <td><img class="circle" src="{{row.avatar}}" height="40px" width="40px"></td>
-          <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer" ng-click="viewUser(key)">
+          <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer" ng-click="viewUser(row.key)">
             {{row.name}} {{row.secondName}} <i class="material-icons" style="vertical-align:middle;"
               ng-if="row.admin">security</i>
           </td>
@@ -35,14 +46,11 @@
               data-badge-caption="inscr"></span></td>
           <td>{{row.degree}}</td>
           <td width="1%" style="white-space:nowrap;">
-            <a title="Enviar mensaje"
-              class="waves-effect waves-light teal darken-3 btn-small btn-floating z-depth-3 modal-trigger"
-              data-target="message_modal"><i class="material-icons">mail_outline</i></a>
             <a title="Calificaciones" class="waves-effect waves-light orange btn-floating btn-small z-depth-3"
-              ng-show="row.enrolled && !row.admin" ng-click="evalUser(key)"><i
+              ng-show="row.enrolled && !row.admin" ng-click="evalUser(row.key)"><i
                 class="material-icons">playlist_add_check</i></a>
             <a title="Aceptar" class="waves-effect waves-light red btn-floating btn-small z-depth-3"
-              ng-click="selectUser(key)" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
+              ng-click="selectUser(row.key)" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
           </td>
         </tr>
       </tbody>
@@ -53,8 +61,8 @@
 <div id="scores_modal" class="modal wide-modal modal-fixed-footer">
   <div class="modal-content">
 
-    <h5><b>Alumno:</b> {{users[selectedKey].name}} {{users[selectedKey].secondName}}</h5>
-    <h5><b>LU:</b> {{users[selectedKey].lu}}</h5>
+    <h5><b>Alumno:</b> {{users[selectedIndex].name}} {{users[selectedIndex].secondName}}</h5>
+    <h5><b>LU:</b> {{users[selectedIndex].lu}}</h5>
     <div class="divider"></div>
 
     <h4>Calificaciones</h4>
@@ -72,19 +80,19 @@
         </thead>
 
         <tbody>
-          <tr class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}"
+          <tr class="{{auxiliaryScores[row.id].score!=users[selectedIndex].scores[row.id].score?'red-text':''}}"
             ng-repeat="(key,row) in activities" ng-show="row.value">
             <td>{{row.name}}</td>
             <td>
-                <input class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}"
+                <input class="{{auxiliaryScores[row.id].score!=users[selectedIndex].scores[row.id].score?'red-text':''}}"
                   type="number" min="0" max="100" step="1" ng-model="auxiliaryScores[row.id].score"
                   ng-change="auxiliaryScores[row.id].evaluator=user.uid;auxiliaryScores[row.id].timestamp=getTime(0)">
             </td>
             <td>{{row.value}}</td>
             <td title="Eliminar nota">
               <div class="chip" ng-if="auxiliaryScores[row.id].evaluator && auxiliaryScores[row.id].evaluator!='Cipressus'" ng-click="auxiliaryScores[row.id]=null;">
-                <img src="{{users[auxiliaryScores[row.id].evaluator].avatar}}">
-                {{users[auxiliaryScores[row.id].evaluator].name}}
+                <img src="{{users[getUserIndex[auxiliaryScores[row.id].evaluator]].avatar}}">
+                {{users[getUserIndex[auxiliaryScores[row.id].evaluator]].name}}
               </div>
               <div class="chip" ng-if="auxiliaryScores[row.id].evaluator && auxiliaryScores[row.id].evaluator=='Cipressus'">
                 <img src="images/mainlogo.png">
@@ -115,7 +123,7 @@
         </thead>
 
         <tbody>
-          <tr class="{{auxiliarySubmits[row.id].submitted!=users[selectedKey].submits[row.id].submitted?'red-text':''}}"
+          <tr class="{{auxiliarySubmits[row.id].submitted!=users[selectedIndex].submits[row.id].submitted?'red-text':''}}"
             ng-repeat="(key,row) in activities track by $index" ng-show="row.dl">
             <td>{{row.name}}</td>
             <td>{{getTime(4,row.dl.date)}}</td>
@@ -127,8 +135,8 @@
             </td>
             <td title="Eliminar nota">
               <div class="chip" ng-if="auxiliarySubmits[row.id].evaluator" ng-click="deleteSubmit(row.id)">
-                <img src="{{users[auxiliarySubmits[row.id].evaluator].avatar}}">
-                {{users[auxiliarySubmits[row.id].evaluator].name}}
+                <img src="{{users[getUserIndex[auxiliarySubmits[row.id].evaluator]].avatar}}">
+                {{users[getUserIndex[auxiliarySubmits[row.id].evaluator]].name}}
               </div>
             </td>
             <td>
@@ -150,28 +158,28 @@
   <div class="modal-content">
     <div class="row">
       <div class="col s3">
-        <img class="responsive-img" src="{{users[selectedKey].avatar}}"></a>
+        <img class="responsive-img" src="{{users[selectedIndex].avatar}}"></a>
       </div>
       <div class="col s6">
-        <h4>{{users[selectedKey].name}} {{users[selectedKey].secondName}} <a
-            ng-if="users[selectedKey].admin">[admin]</a></h4>
-        <h5 class="truncate"><i>{{users[selectedKey].email}}</i></h5>
-        <h5><b>LU:</b> <i>{{users[selectedKey].lu}}</i></h5>
-        <h5 class="truncate"><i>{{users[selectedKey].degree}}</i></h5>
+        <h4>{{users[selectedIndex].name}} {{users[selectedIndex].secondName}} <a
+            ng-if="users[selectedIndex].admin">[admin]</a></h4>
+        <h5 class="truncate"><i>{{users[selectedIndex].email}}</i></h5>
+        <h5><b>LU:</b> <i>{{users[selectedIndex].lu}}</i></h5>
+        <h5 class="truncate"><i>{{users[selectedIndex].degree}}</i></h5>
         <p><b>Usuario desde:</b>
-          <i>{{users[selectedKey].enrolled?getTime(3,users[selectedKey].enrolled):"(Usuario no aprobado)"}}</i></p>
-        <p><b>Último acceso:</b> <i>{{getTime(3,users[selectedKey].activity.last_login)}}
-            ({{getTime(5,users[selectedKey].activity.last_login)}})</i></p>
-        <p><b>Compañeros de comisión:</b> {{getUserNames(users, users[selectedKey].partners)}}</p>
+          <i>{{users[selectedIndex].enrolled?getTime(3,users[selectedIndex].enrolled):"(Usuario no aprobado)"}}</i></p>
+        <p><b>Último acceso:</b> <i>{{getTime(3,users[selectedIndex].activity.last_login)}}
+            ({{getTime(5,users[selectedIndex].activity.last_login)}})</i></p>
+        <p><b>Compañeros de comisión:</b> {{getUserNames(users, users[selectedIndex].partners)}}</p>
       </div>      
     </div>
     <div class="divider"></div>
     <div class="row">
-      <div class="col s12 m6" ng-show="!users[selectedKey].admin">
+      <div class="col s12 m6" ng-show="!users[selectedIndex].admin">
         <div id="variable_pie_container"></div>
       </div>
-      <div class="col s12 m6" ng-show="users[selectedKey].test_fs">        
-        <test-results answers="{{users[selectedKey].test_fs.answers}}"></test-results>
+      <div class="col s12 m6" ng-show="users[selectedIndex].test_fs">        
+        <test-results answers="{{users[selectedIndex].test_fs.answers}}"></test-results>
       </div>
     </div>
   </div>
@@ -180,7 +188,7 @@
 <div id="message_modal" class="modal">
   <div class="modal-content">
     <h5>Enviar mensaje</h5>
-    <p>Para {{users[selectedKey].name}} ({{users[selectedKey].email}})</p>
+    <p>Para {{users[selectedIndex].name}} ({{users[selectedIndex].email}})</p>
     <div class="input-field col s12">
       <textarea id="textarea" class="materialize-textarea" ng-model="message"></textarea>
       <label for="textarea">Mensaje</label>
@@ -197,7 +205,7 @@
   <div class="modal-content">
 
     <h5>Confirme la operación</h5>
-    <p>¿Desea aprobar el registro del usuario {{users[selectedKey].name}} {{users[selectedKey].secondName}} como alumno?</p>
+    <p>¿Desea aprobar el registro del usuario {{users[selectedIndex].name}} {{users[selectedIndex].secondName}} como alumno?</p>
     <p>El curso actual es: <b>{{activitiesTree.course.name}}</b></p>
     <p>El usuario aparecerá en los listados de alumnos para tomar asistencia o evaluar calificaciones y podrá ver el
       progreso de sus notas en la sección de dashboard.</p>
