Estructura general vista de edicion de curso

--- a/src/views/courses.html
+++ b/src/views/courses.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="fixed-action-btn">
-    <a href="#/activities" title="Nuevo curso" class="btn-floating btn-large green darken-1 pulse modal-trigger"><i class="large material-icons">add</i></a>
+    <a href="#/activities" title="Nuevo curso" class="btn-floating btn-large green darken-1 pulse"><i class="large material-icons">add</i></a>
 </div>
 
 <div id="confirm_delete_modal" class="modal">
