--- a/src/views/simulator.html
+++ b/src/views/simulator.html
@@ -53,6 +53,7 @@
                     <th>Nombre</th>
                     <th>Modificado</th>
                     <th>Componentes</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
@@ -61,6 +62,7 @@
                     <td>{{row.name}}</td>
                     <td>{{getTime(3,row.timestamp)}}</td>
                     <td>{{row.size}}</td>
+                    <td><a title="Aceptar" class="waves-effect waves-light red btn-floating btn-small z-depth-3"ng-click="deleteSim(key)"><i class="material-icons">delete</i></a></td>
                 </tr>
             </tbody>
         </table>
