Entrega de simulaciones

--- a/src/views/submissions.html
+++ b/src/views/submissions.html
@@ -2,7 +2,7 @@
 
   <h3>Entrega de actividades</h3>
 
-  <h4 ng-if="submCnt == 0 && !user.admin" class="center grey-text"><i>Aún no has realizado entrega de informes!</i></h4>
+  <h4 ng-if="submCnt == 0 && !user.admin" class="center grey-text"><i>Aún no has realizado presentaciones!</i></h4>
   <h4 ng-if="submCnt == 0 && user.admin" class="center grey-text"><i>Aún no hay entregas realizadas</i></h4>
 
   <table ng-if="submCnt > 0" class="highlight" style="max-width:100%;overflow-x:auto;display:inline-block;">
@@ -28,7 +28,7 @@
           </div>
         </td>
         <td width="1%" style="white-space:nowrap;">
-          <a ng-show="user.admin" title="Descargar" class="waves-effect waves-light green darken-3 btn-small btn-floating z-depth-3" href="{{row.link}}" target="_blank" rel="noopener noreferrer" ng-click="downloaded(key)"><i class="material-icons">get_app</i></a>
+          <a ng-show="user.admin" title="Descargar" class="waves-effect waves-light green darken-3 btn-small btn-floating z-depth-3" href="{{row.link}}" {{row.type=='report' ? 'target="_blank" rel="noopener noreferrer"':''}} ng-click="downloaded(key)"><i class="material-icons">get_app</i></a>
           <a title="Historial" class="waves-effect waves-light blue darken-3 btn-small btn-floating z-depth-3" ng-click="viewSubm(key)"><i class="material-icons">history</i></a>
           <a title="Eliminar" class="waves-effect waves-light red darken-3 btn-small btn-floating z-depth-3 modal-trigger {{!user.admin && (row.status[row.status.length-1].action > 0) ? 'disabled':''}}" data-target="confirm_delete_modal" ng-click="deleteFile(key)"><i class="material-icons">delete</i></a>
           <a title="Evaluar" ng-show="user.admin && row.status[row.status.length-1].action == 1" title="Corregido" class="waves-effect waves-light brown darken-3 btn-small btn-floating z-depth-3" ng-click="evaluated(key)"><i class="material-icons">done_outline</i></a>
@@ -47,7 +47,7 @@
 
 <div id="files_modal" class="modal" ng-hide="user.admin">
   <div class="modal-content">
-    <h4>Subir archivos</h4>
+    <h4>Indicar actividad</h4>
 
     <div class="input-field">
         <select id="activity_select">
@@ -61,13 +61,23 @@
       <p><b>Vencimiento:</b> {{getTime(3,selectedActivity.deadline)}}</p>
     </div>
 
-    <div ng-show="selectedActivity" class="file-field input-field">
+    <div ng-show="selectedActivity.type=='report'" class="file-field input-field">
       <div class="btn green darken-3">
         <span>Elegir archivo</span>
         <input id="fileInput" type="file">
       </div>
       <div class="file-path-wrapper">
         <input id="fileInputText" class="file-path validate" type="text">
+      </div>
+    </div>
+
+    <div ng-show="selectedActivity.type=='sim'" class="file-field input-field">
+      <div class="input-field">
+        <select id="simulation_select">
+            <option value="" disabled selected>Elija una simulación</option>
+            <option value="{{sim.id}}" ng-repeat="(key,sim) in simulations track by $index">{{sim.name}}</option>
+        </select>
+        <label for="simulation_select">Simulación</label>
       </div>
     </div>
 
@@ -79,7 +89,8 @@
 
   <div class="modal-footer">
     <a class="modal-close waves-effect waves-white btn grey">Cancelar</a>
-    <a class="waves-effect waves-white btn green darken-3 {{selectedActivity?'':'disabled'}}" ng-click="pushFile()">Entregar</a>
+    <a ng-if="selectedActivity.type=='report'" class="waves-effect waves-white btn green darken-3" ng-click="pushFile()">Entregar</a>
+    <a ng-if="selectedActivity.type=='sim'" class="waves-effect waves-white btn blue darken-3" ng-click="submitSim()">Entregar</a>
   </div>
 </div>
 
@@ -106,7 +117,8 @@
       <p><b>Actividad:</b> {{submissions[evaluatingKey].activityName}}</p>
       <p><b>Comisión:</b> {{getUserNames(users, submissions[evaluatingKey].authors)}}</p>
       <p><b>Nombre de archivo:</b> {{submissions[evaluatingKey].name}} [.{{submissions[evaluatingKey].format}}]</p>
-      <p><b>Peso:</b> {{readableFileSize(submissions[evaluatingKey].size)}}</p>
+      <p ng-if="submissions[evaluatingKey].type=='report'"><b>Peso:</b> {{readableFileSize(submissions[evaluatingKey].size)}}</p>
+      <p ng-if="submissions[evaluatingKey].type=='sim'"><b>Componentes:</b> {{submissions[evaluatingKey].size}}</p>
       
       <br>
 
@@ -138,7 +150,8 @@
       <p><b>Actividad:</b> {{submissions[submKeyView].activityName}}</p>
       <p><b>Comisión:</b> {{getUserNames(users, submissions[submKeyView].authors)}}</p>
       <p><b>Nombre de archivo:</b> {{submissions[submKeyView].name}} [.{{submissions[submKeyView].format}}]</p>
-      <p><b>Peso:</b> {{readableFileSize(submissions[submKeyView].size)}}</p>
+      <p ng-if="submissions[submKeyView].type=='report'"><b>Peso:</b> {{readableFileSize(submissions[submKeyView].size)}}</p>
+      <p ng-if="submissions[submKeyView].type=='sim'"><b>Componentes:</b> {{submissions[submKeyView].size}}</p>
       <h5>Historial:</h5>
       <table class="highlight row" style="max-width:100%;overflow-x:auto">
           <thead>
