Mejora del dashboard alumno

--- a/src/style/custom/custom.css
+++ b/src/style/custom/custom.css
@@ -1,7 +1,7 @@
 body {
-  display: flex!important;
-  min-height: 100vh!important;
-  flex-direction: column!important;
+  display: flex !important;
+  min-height: 100vh !important;
+  flex-direction: column !important;
 }
 
 /* Notificaciones */
@@ -9,36 +9,42 @@ body {
   position: relative;
   display: inline-block;
 }
+
 .custom-dropdown-content {
   display: none;
   line-height: 100%;
   background-color: white;
   border-radius: 5px;
-  color:black;
+  color: black;
   right: 0px;
   position: absolute;
   min-width: 250px;
-  padding:0px;
+  padding: 0px;
   z-index: 1000;
 }
+
 .custom-dropdown:hover .custom-dropdown-content {
   display: block;
 }
-.custom-dropdown-item{
+
+.custom-dropdown-item {
   margin: 0px;
   top: 0px;
   padding: 5px 15px 5px 15px;
 }
-.custom-dropdown-item:hover{
+
+.custom-dropdown-item:hover {
   background-color: rgb(171, 192, 171);
 }
-.unread-item{
+
+.unread-item {
   background-color: rgb(206, 218, 206);
 }
-.badge-counter{
+
+.badge-counter {
   position: absolute;
-  right:2px;
-  top:10px;
+  right: 2px;
+  top: 10px;
   border-radius: 50%;
   width: 20px;
   height: 20px;
@@ -50,23 +56,24 @@ body {
 }
 
 /* Comentarios en home */
-.home-comment{
+.home-comment {
   border-radius: 20px;
   background-color: rgb(228, 226, 226);
-  padding:10px!important;
+  padding: 10px !important;
 }
 
 
 /* Fix efecto escalera del sidenav*/
-.no-padding{
+.no-padding {
   clear: both;
 }
 
 
 /* Preloader */
 .preloader-wrapper {
-  margin: 0 auto; 
+  margin: 0 auto;
 }
+
 .preloader-wrapper-pre {
   background-color: black;
   opacity: 0.85;
@@ -74,11 +81,12 @@ body {
   height: 100%;
   position: fixed;
   margin: 0;
-  top: 0!important;
-  z-index: 2000; 
+  top: 0 !important;
+  z-index: 2000;
 }
+
 .preloader-progress-text {
-  position:fixed;
+  position: fixed;
   text-align: center;
   width: 100%;
   z-index: 2001;
@@ -86,16 +94,16 @@ body {
 
 
 /* Login */
-.login-box{
+.login-box {
   border-radius: 10px;
-  display: inline-block; 
-  padding: 32px 35px 0px 35px; 
-  background: rgba(210, 210, 210, 0.83)!important;
+  display: inline-block;
+  padding: 32px 35px 0px 35px;
+  background: rgba(210, 210, 210, 0.83) !important;
 }
 
-.body-login{
+.body-login {
   background-image: linear-gradient(to right, rgba(245, 246, 252, 0.4), rgb(9, 61, 25)), url('../../images/forest.jpg');
-  background-size:cover;
+  background-size: cover;
 }
 
 
@@ -109,8 +117,8 @@ body {
 .wide-modal {
   width: 85% !important;
   min-width: 85% !important;
-  height: 85% !important; 
-  min-height: 85% !important; 
+  height: 85% !important;
+  min-height: 85% !important;
   top: 7.5% !important;
   border-radius: 10px;
 }
@@ -118,8 +126,28 @@ body {
 .full-modal {
   width: 98% !important;
   min-width: 98% !important;
-  height: 98% !important; 
-  min-height: 98% !important;  
+  height: 98% !important;
+  min-height: 98% !important;
   top: 1% !important;
   border-radius: 10px;
+}
+
+
+/* Container para cards del dashboard */
+
+.dashboard-container {
+  margin: 0 auto;
+  width: 99%
+}
+
+@media only screen and (min-width: 600px) {
+  .dashboard-container {
+    width: 95%
+  }
+}
+
+@media only screen and (min-width: 990px) {
+  .dashboard-container {
+    width: 90%
+  }
 }
