--- a/public/views/submissions.html
+++ b/public/views/submissions.html
@@ -60,8 +60,7 @@
     <div class="input-field">
       <select id="activity_select">
         <option value="" disabled selected>Elija una opción</option>
-        <option value="{{row.id}}" ng-repeat="(key,row) in activities track by $index" ng-if="row.dl.submit">
-          {{row.name}}</option>
+        <option value="{{row.id}}" ng-repeat="(key,row) in activities track by $index" ng-if="row.dl.submit">{{row.name}}</option>
       </select>
       <label for="activity_select">Actividad</label>
     </div>
@@ -70,23 +69,23 @@
       <p><b>Vencimiento:</b> {{getTime(3,selectedActivity.deadline)}}</p>
     </div>
 
-    <div ng-show="selectedActivity.type=='report'" class="file-field input-field">
+    <div ng-show="selectedActivity" class="file-field input-field">
       <div class="btn green darken-3">
-        <span>Elegir archivo</span>
-        <input id="fileInput" type="file">
+        <span>Adjuntar archivo</span>
+        <input id="fileInput" type="file" multiple>
       </div>
       <div class="file-path-wrapper">
         <input id="fileInputText" class="file-path validate" type="text">
       </div>
     </div>
 
-    <div ng-show="selectedActivity.type=='sim'" class="file-field input-field">
+    <div ng-show="selectedActivity" class="file-field input-field">
       <div class="input-field">
         <select id="simulation_select">
           <option value="" disabled selected>Elija una simulación</option>
           <option value="{{sim.id}}" ng-repeat="(key,sim) in simulations track by $index">{{sim.name}}</option>
         </select>
-        <label for="simulation_select">Simulación</label>
+        <label for="simulation_select">Adjuntar simulación</label>
       </div>
     </div>
 
@@ -98,10 +97,7 @@
 
   <div class="modal-footer">
     <a class="modal-close waves-effect waves-white btn grey">Cancelar</a>
-    <a ng-if="selectedActivity.type=='report'" class="waves-effect waves-white btn green darken-3"
-      ng-click="pushFile()">Entregar</a>
-    <a ng-if="selectedActivity.type=='sim'" class="waves-effect waves-white btn blue darken-3"
-      ng-click="submitSim()">Entregar</a>
+    <a ng-show="selectedActivity" class="waves-effect waves-white btn green darken-3" ng-click="pushFile()">Entregar</a>
   </div>
 </div>
 
@@ -109,7 +105,7 @@
   <div class="modal-content">
     <h5>Confirme la operación</h5>
     <p>¿Está seguro que desea eliminar esta entrega?</p>
-    <p><b>Nombre de archivo: </b>{{submissions[fileKeyToDelete].name}}</p>
+    <p><b>Nombre de archivo: </b>{{submissions[fileKeyToDelete].filename}}</p>
     <p><b>Subido: </b>{{getTime(3,submissions[fileKeyToDelete].status[0].timestamp)}}</p>
     <br>
     <p>Esta operación no se puede deshacer.</p>
@@ -127,7 +123,7 @@
 
     <p><b>Actividad:</b> {{submissions[evaluatingKey].activityName}}</p>
     <p><b>Comisión:</b> {{getUserNames(users, submissions[evaluatingKey].authors)}}</p>
-    <p><b>Nombre de archivo:</b> {{submissions[evaluatingKey].name}} [.{{submissions[evaluatingKey].format}}]</p>
+    <p><b>Nombre de archivo:</b> {{submissions[evaluatingKey].filename}}</p>
     <p ng-if="submissions[evaluatingKey].type=='report'"><b>Peso:</b>
       {{readableFileSize(submissions[evaluatingKey].size)}}</p>
     <p ng-if="submissions[evaluatingKey].type=='sim'"><b>Componentes:</b> {{submissions[evaluatingKey].size}}</p>
@@ -169,7 +165,7 @@
     <h4>Detalles de la entrega</h4>
     <p><b>Actividad:</b> {{submissions[submKeyView].activityName}}</p>
     <p><b>Comisión:</b> {{getUserNames(users, submissions[submKeyView].authors)}}</p>
-    <p><b>Nombre de archivo:</b> {{submissions[submKeyView].name}} [.{{submissions[submKeyView].format}}]</p>
+    <p><b>Nombre de archivo:</b> {{submissions[submKeyView].filename}}</p>
     <p ng-if="submissions[submKeyView].type=='report'"><b>Peso:</b> {{readableFileSize(submissions[submKeyView].size)}}
     </p>
     <p ng-if="submissions[submKeyView].type=='sim'"><b>Componentes:</b> {{submissions[submKeyView].size}}</p>
